# Eigen

./: .gitignore  README.md  brouillon.ipynb  convert_dataset_to_npz.py  data_generation.py  data_generation_yaml.py  eigenmode_dataset_analysis.ipynb  eigenmodes.ipynb  fno.py  fno_eigenmode.ipynb  fno_fresnel.ipynb  fresnel_dataset_analysis.ipynb  fresnel_example.ipynb  functions.py  generate_fresnel_dataset.py  learn_eigenmodes.ipynb  main.py  parallel_utils.py  parameters.yaml  parameters_to_yaml.py  pyproject.toml  quickstart_tutorial.ipynb  requirements.txt  test.ipynb  test1.ipynb  test_unet_learning.py  train_eigenmodes.py  unet.py  unet_eigenmode.ipynb  youtube_tutorial.ipynb
dataset/: parameters.txt
dataset/t_00001/: eigenmode_001_imag.csv  eigenmode_001_real.csv  eigenmode_002_imag.csv  eigenmode_002_real.csv  eigenmode_003_imag.csv  eigenmode_003_real.csv  eigenmode_004_imag.csv  eigenmode_004_real.csv  gaussian_prop_imag.csv  gaussian_prop_real.csv
dataset/t_00002/: eigenmode_001_imag.csv  eigenmode_001_real.csv  eigenmode_002_imag.csv  eigenmode_002_real.csv  eigenmode_003_imag.csv  eigenmode_003_real.csv  eigenmode_004_imag.csv  eigenmode_004_real.csv  gaussian_prop_imag.csv  gaussian_prop_real.csv
dataset/t_00003/: eigenmode_001_imag.csv  eigenmode_001_real.csv  eigenmode_002_imag.csv  eigenmode_002_real.csv  eigenmode_003_imag.csv  eigenmode_003_real.csv  eigenmode_004_imag.csv  eigenmode_004_real.csv  (+2 more)
functions/: __init__.py  colours.py  eigenmodes.py  measurement.py  optical_modes.py  plotting.py  propagation.py  turbulence.py
writeup/: Eigen.tex
(+70 files in other folders)
