[project]
name = "eigen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aotools>=1.0.7",
    "colorcet>=3.1.0",
    "ipykernel>=7.1.0",
    "lightpipes>=2.1.5",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pillow>=12.0.0",
    "tqdm>=4.67.1",
]
